--- a/사시나무.html
+++ b/사시나무.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-<video width="500" height="50%" controls autoplay poster="멸치왕.jpg" src="사시나무형.mp4"></video>
+<video width="500" height="50%" controls autoplay poster="멸치왕.jpg" src="사시나무형준.mp4"></video>
   </body>
 </html>
